@@ -563,6 +563,16 @@ extern Dwfl_Error __libdw_open_file (int *fdp, Elf **elfp,
 				     bool close_on_fail, bool archive_ok)
   internal_function;
 
+/* Call __libdw_open_file but the ELF file starts in *FDP at START_OFFSET and
+   has length MAXIMUM_SIZE.  __libdw_open_file defaults to 0 and ~((size_t) 0)
+   respectively.  */
+extern Dwfl_Error __libdw_open_file_at_offset (int *fdp, Elf **elfp,
+					       off_t start_offset,
+					       size_t maximum_size,
+					       bool close_on_fail,
+					       bool archive_ok)
+  internal_function;
+
 /* Fetch PT_DYNAMIC P_VADDR from ELF and store it to *VADDRP.  Return success.
    *VADDRP is not modified if the function fails.  */
 extern bool __libdwfl_dynamic_vaddr_get (Elf *elf, GElf_Addr *vaddrp)
