@@ -3,6 +3,8 @@ Version 0.159
 stack: New option -d, --debugname to lookup DWARF debuginfo name for frame.
        New option -i, --inlines to show inlined frames using DWARF debuginfo.
 
+libelf: New function elf_begin_at_offset.
+
 Version 0.158
 
 libdwfl: dwfl_core_file_report has new parameter executable.
